# Ghazan-HS

./: .gitignore  ConversionFormula.cabal  Formula.cabal  Ghazan.cabal  README.md  SimpleMath.cabal
src/: Formula.hs  Ghazan.hs  Main.hs
src/Formula/: Area.hs  Class.hs  Magnitude.hs  Time.hs
src/Formula/Area/: Area.hs
src/Formula/Numerics/: Numerics.hs
src/Formula/Speed/: Speed.hs
src/Formula/Temperature/: Temperature.hs
src/Formula/Volume/: Volume.hs
src/Formula/Weight/: Weight.hs
src/Ghazan/: Area.hs  Class.hs  Formula.hs  Length.hs  Liquid.hs  Magnitude.hs  Numerics.hs  Speed.hs  Temperature.hs  Time.hs  Volume.hs  Weight.hs  flycheck_Magnitude.hs
