name:                Formula
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Formula is a small Haskell library for doing simple math conversions.
homepage:            https://github.com/Cortlandd/ConversionFormula
license:             BSD3
license-file:        LICENSE
author:              Cortland Walker
maintainer:          cortlandits@gmail.com
copyright:           2016 Cortland Walker
category:            Math
build-type:          Simple
cabal-version:       >=1.10

Library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
  exposed-modules:     Formula
                     , Formula.Class
                     , Formula.Magnitude
                     , Formula.Area
                     , Formula.Length
                     , Formula.Liquid
                     , Formula.Numerics
                     , Formula.Speed
                     , Formula.Temperature
                     , Formula.Time
                     , Formula.Volume
                     , Formula.Weight 

