name:                SimpleMath
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         SimpleMath is a small Haskell library for doing simple math conversions.
homepage:            https://github.com/githubuser/SimpleMath
license:             BSD3
license-file:        LICENSE
author:              Cortland Walker
maintainer:          cortlandits@gmail.com
copyright:           2016 Cortland Walker
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable SimpleMath
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
